@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.632 2004-12-04 06:59:51 castaglia Exp $
+$Id: NEWS,v 1.633 2004-12-12 00:14:41 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -92,6 +92,8 @@ CVS
      %{total_files_in}
      %{total_files_out}
      %{total_files_xfer}
+
+- Bug 2027 - Add log message for timed out passive transfers.
 
 1.2.10 - Released 04-Sep-2004
 --------------------------------
